kubernetes/mastadon/mastodon.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mastodon
  labels:
    name: mastodon

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: mastodon
spec:
  tls:
    - hosts:
      - mastodon.local
      secretName: mastodon-tls
  rules:
    - host: mastodon.local
      http:
        paths:
          - backend:
              serviceName: mastodon
              servicePort: web
---

apiVersion: v1
kind: Service
metadata:
  name: mastodon
  namespace: mastodon
spec:
  selector:
    app: mastodon
  ports:
  - name: web
    port: 3000
    targetPort: web
  - name: streaming
    port: 4000
    targetPort: streaming

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mastodon
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: redis

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mastodon
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: postgres

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: mastodon
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon
    spec:
      containers:
      - name: web
        image: tootsuite/mastodon:v2.3.3
        command: [
          "/bin/bash", "-c",
            "rake assets:precompile && \
             rake db:migrate && \
             bundle exec rails s -p 3000 -b 0.0.0.0"
        ]
        ports:
        - name: web
          containerPort: 3000
        resources:
          requests:
            memory: 350Mi
            cpu: 100m
        volumeMounts:
          - mountPath: /mastodon/public/assets
            name: mastodon-assets
        volumeMounts:
          - mountPath: /mastodon/public/packs
            name: mastodon-packs
        volumeMounts:
          - mountPath: /mastodon/public/system
            name: mastodon-system
      - name: streaming
        image: tootsuite/mastodon:v2.3.3
        command: [ "yarn", "start" ]
        ports:
        - name: streaming
          containerPort: 4000
        resources:
          requests:
            memory: 32Mi
            cpu: 25m
      - name: sidekiq
        image: tootsuite/mastodon:v2.3.3
        command: [
          "bundle", "exec", "sidekiq",
            "-q", "default",
            "-q", "mailers",
            "-q", "pull",
            "-q", "push"
        ]
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
        volumeMounts:
          - mountPath: /mastodon/public/assets
            name: mastodon-assets
        volumeMounts:
          - mountPath: /mastodon/public/packs
            name: mastodon-packs
        volumeMounts:
          - mountPath: /mastodon/public/system
            name: mastodon-system
      - name: smtpd
        image: wodby/opensmtpd:6-1.3.0
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
      volumes:
      - name: mastodon-assets
        emptyDir: {}
      - name: mastodon-packs
        emptyDir: {}
      - name: mastodon-system
        emptyDir: {}

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:alpine
        ports:
          - name: postgres
            containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-volume
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-volume-claim

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      namespace: mastodon
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        imagePullPolicy: Always
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - name: redis-volume
          mountPath: /data
      volumes:
      - name: redis-volume
        persistentVolumeClaim:
          claimName: redis-volume-claim
